# yuno_agent

./: CMakeLists.txt  README.rst  deploy_agent.sh  deploy_remote_agent.sh
certs/: localhost.csr  yuneta_agent.crt  yuneta_agent.csr  yuneta_agent.key
create-certs-self-signed/: README.txt  create_localhost_cert1.sh  create_localhost_cert2.sh  create_yuneta_agent_cert2.sh  localhost.crt  localhost.key  read_cert.sh  read_remote_cert.sh
service/: install-yuneta-service.sh  remove-yuneta-service.sh  yuneta_agent
src/: .c_agent.c.kate-swp  c_agent.c  c_agent.c.new  c_agent.h  c_pty.c  main.c  treedb_schema_yuneta_agent.c  yuno_yuneta_agent.c  yuno_yuneta_agent.h
